# py-cpuinfo

./: .gitignore  ChangeLog  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cpuinfo.py  get_cpuid.asm  main.py  pyproject.toml  setup.py  test_debian_8_x86_64.py  test_example.py  test_main.py  test_no_main.py  test_no_main_pyinstaller.sh  test_suite.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-test.yml
cpuinfo/: __init__.py  __main__.py  cpuinfo.py
example/: example_normal.py  example_pyinstaller.py
tests/: helpers.py  test_actual.py  test_beagle_bone_arm.py  test_bug_152_cpu_zero.py  test_cli.py  test_compile_errors.py  test_cpuid.py  test_debian_8_x86_64.py  test_example.py  test_filter.py  test_free_bsd_11_x86_64.py  test_free_bsd_x86_64.py  test_haiku_x86_32.py  test_haiku_x86_64.py  test_haiku_x86_64_beta_1.py  test_haiku_x86_64_beta_1_ryzen_7.py  test_invalid_cpu.py  test_linux_aarch64_64.py  test_linux_alt_p9_mipsel_bfk3.py  test_linux_beagle_bone_arm.py  test_linux_debian_8_5_x86_64.py  test_linux_debian_8_7_1_ppc64le.py  test_linux_debian_8_arm_cortex_a57.py  test_linux_debian_8_x86_64.py  test_linux_fedora_24_ppc64le.py  test_linux_fedora_24_x86_64.py  test_linux_fedora_29_x86_64_ryzen_7.py  test_linux_fedora_5_s390x.py  test_linux_gentoo_2_2_x86_64.py  test_linux_loongarch64_loongson3A5000LL.py  test_linux_mips64el_loongson3A3000.py  test_linux_new_world_loongarch64.py  test_linux_odroid_c2_aarch64.py  test_linux_odroid_xu3_arm_32.py  test_linux_old_world_loongarch64.py  test_linux_raspberry_pi_model_b_arm.py  test_linux_rhel_7_3_ppc64le.py  test_linux_ubuntu_16_04_x86_64.py  test_linux_ubuntu_21_04_riscv64.py  test_linux_ubuntu_22_04_x86_64.py  (+15 more)
tools/: get_system_info.py
