[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-cpuinfo"
version = "9.0.0"
description = "Get CPU info with pure Python"
license = {text = "MIT"}
authors = [
    {name = "Matthew Brennan Jones", email = "matthew.brennan.jones@gmail.com"}
]
readme = "README.md"
requires-python = ">=3"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
packages=["cpuinfo"]

[project.urls]
Homepage = "https://github.com/workhorsy/py-cpuinfo"
Repository = "https://github.com/workhorsy/py-cpuinfo.git"
Issues = "https://github.com/workhorsy/py-cpuinfo/issues"
Changelog = "https://github.com/workhorsy/py-cpuinfo/blob/master/ChangeLog"

[project.scripts]
cpuinfo = "cpuinfo:main"

[tool.distutils.bdist_wheel]
universal = false
